nodejs-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodejs-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: nodejs
        image: gcr.io/viglini-1/docker-examples-node:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
