nodejs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
spec:
  containers:
  - name: nodejs
    image: gcr.io/viglini-1/docker-examples-node:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 80
