nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: nodejs
spec:
#  type: ClusterIP
  type: NodePort
#  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nodejs
